5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1616_2947.log
== TEST (2019-04-01 15:37:02) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

math import

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y + z)

print(round(a, 2))
-- ERROR:
File "XXXX", line 7
    math import
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:48) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

math import

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y + z)

print(round(a, 2))
-- ERROR:
File "XXXX", line 7
    math import
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:57) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

from math import

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y + z)

print(round(a, 2))
-- ERROR:
File "XXXX", line 7
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:40:03) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

from math import

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y + z)

print(round(a, 2))
-- EXECUTION TIME:
0.131597
-- ERROR:
  File "/home/codebench/codes/1616/2947/main.py", line 7
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:04) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

from math import

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y + z)

print(round(a, 2))
-- ERROR:
File "XXXX", line 7
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:12) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

from math import *

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y + z)

print(round(a, 2))
-- OUTPUT:
15.62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:40:15) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

from math import *

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y + z)

print(round(a, 2))
-- EXECUTION TIME:
0.204734
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
15.62
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
37.04
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:15) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

from math import *

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y + z)

print(round(a, 2))
-- OUTPUT:
15.62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:41:01) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

from math import *

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y - z)

print(round(a, 2))
-- OUTPUT:
9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:41:27) 
-- CODE:
#Descubra qual o valor de "a"

b = float(input(" NUMERO "))
c = float(input(" NUMERO "))
alfa = float(input(" ANGULO "))

from math import *

m = radians(alfa)

x = b**2
y = c**2
z = 2*b*c*cos(m)

a = sqrt(x + y - z)

print(round(a, 2))
-- EXECUTION TIME:
0.157654
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
9.17
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
17.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
